k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    name: portfolio
